# planetary-computer-mcp

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  REFACTOR_PLAN.md  check_docs.py  collections.md  eslint.config.js  find_missing_docs.py  package.json  pyproject.toml  tsconfig.json
.github/: CONTRIBUTING.md  commit-convention.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci-format-lint.yml  ci.yml  deploy-app.yml  publish-npm.yml  publish-vscode-extension.yml  release-all.yml  release-prepare.yml  release-vsce.yml  release.yml
.husky/: pre-commit
app/: .gitignore  package.json
app/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
app/src/components/: footer.tsx  installation-grid.tsx  spinning-globe.tsx
app/src/lib/: og-image.tsx
app/src/styles/: globe.css
planetary-computer-mcp-py/: AGENTS.md  README.md  pyproject.toml  ruff.toml
planetary-computer-mcp-py/src/: __init__.py  server.py
planetary-computer-mcp-py/src/core/: __init__.py  collections.py  geocoding.py  raster_utils.py  stac_client.py  vector_utils.py  visualization.py  zarr_utils.py
planetary-computer-mcp-py/src/tools/: download_data.py  download_geometries.py
planetary-computer-mcp-py/tests/: test_download_data.py
src/: collection-utils.ts  geo-utils.ts  index.ts  stac-formatters.ts  temporal-utils.ts  utils.ts  visualization-utils.ts  zarr-preview.ts  zarr-utils.ts
src/planetary_computer_mcp/: __init__.py  server.py
src/planetary_computer_mcp/core/: __init__.py  collections.py  geocoding.py  raster_utils.py  stac_client.py  vector_utils.py  visualization.py  zarr_utils.py
src/planetary_computer_mcp/tools/: __init__.py  download_data.py  download_geometries.py
test/: test-cog-dem.ts  test-cog-lulc.ts  test-cog-modis.ts  test-cog-naip.ts  test-cog-optical.ts  test-cog.ts  test-daymet-na.ts  test-ms-buildings.ts  test-zarr.ts  tools.test.ts
tests/: conftest.py  test_download_data.py  test_mcp.py  test_prompts.py
vscode-extension/: .vscodeignore  LICENSE  README.md  eslint.config.js  package.json  tsconfig.json
vscode-extension/src/: extension.ts
