[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.3,<0.10" ]

[project]
name = "planetary-computer-mcp"
version = "0.1.0"
description = "A Python MCP Server for interacting with the Planetary Computer STAC Catalog."
readme = "README.md"
keywords = [
  "earth-observation",
  "geospatial",
  "mcp",
  "model-context-protocol",
  "planetary-computer",
  "remote-sensing",
  "satellite",
  "stac",
]
license = { file = "LICENSE" }
authors = [
  { name = "Isaac Corley", email = "isaac.corley@proton.me" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "adlfs>=2025.8",
  "contextily>=1.7",
  "duckdb>=1",
  "fastmcp>=2.14.1",
  "geopandas>=0.14",
  "geopy>=2.4",
  "h5netcdf>=1.7.3",
  "matplotlib>=3.8",
  "mcp>=1",
  "odc-stac>=0.3",
  "pillow>=10",
  "planetary-computer>=1",
  "pyarrow>=22",
  "pystac-client>=0.8",
  "rioxarray>=0.15",
  "xarray>=2024.1",
  "zarr>=2.18",
]

urls.Homepage = "https://github.com/isaaccorley/planetary-computer-mcp"
urls.Issues = "https://github.com/isaaccorley/planetary-computer-mcp/issues"
urls.Repository = "https://github.com/isaaccorley/planetary-computer-mcp"
scripts.planetary-computer-mcp = "planetary_computer_mcp.server:main"

[dependency-groups]
dev = [
  "ipykernel>=7.0.1",
  "ipywidgets>=8.1.7",
  "numpydoc>=1.10",
  "pre-commit>=4.3",
  "pytest>=8.4.2",
  "pytest-cov>=7",
  "ruff>=0.14.1",
  "ty>=0.0.1a23",
]

[tool.ruff]
target-version = "py313"
line-length = 100
force-exclude = true

lint.extend-select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "EXE",  # flake8-executable
  "FA",   # flake8-future-annotations
  "FLY",  # flynt
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "PERF", # Perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "PYI",  # flake8-pyi
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",
  "SIM",  # flake8-simplify
  "SLOT", # flake8-slots
  "TCH",  # flake8-type-checking
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]
lint.ignore = [
  "ANN401",
  "COM812",
  "COM819",
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "PT011",
  "PT012",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "RET505",
  "RET506",
  "RUF005",
  "SIM108",
  "TRY003",
  "W191",
]
lint.extend-per-file-ignores."tests/**" = [
  "ANN001",
  "ANN201",
  "RUF029",
  "SIM117",
  "SIM300",
]

lint.isort.known-first-party = [ "src" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "-v --cov=src --cov-report=term-missing"
pythonpath = [ "src" ]
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
  "fast: marks tests as fast-running (suitable for frequent execution)",
  "slow: marks tests as slow-running (skip in CI or when speed is critical)",
]

[tool.numpydoc_validation]
checks = [
  "GL06",
  "GL07",
  "GL09",
  "GL10",
  "SS01",
  "SS02",
  "SS03",
  "SS04",
  "PR01",
  "PR02",
  "PR03",
  "PR04",
  "PR05",
  "PR06",
  "RT01",
  "RT02",
  "RT03",
]
